--- a/templates/website.html
+++ b/templates/website.html
@@ -21,7 +21,7 @@
             Input image
         </h2>
         <ul>
-            <li>Input MRI images must be a transverse MRI image</li>
+            <li>Input any MRI images of your choice.</li>
         </ul>
         <form action="/upload" method="POST" enctype="multipart/form-data">
             <input type="file" id="inputImage" name="inputImage" accept="image/*">
